@@ -1,3 +1,7 @@
+30 March 2009
++ Error checking added to document upload.
++ Fixed multimedia folder pager.
+
 25 March 2009
 + Added file type limits to fckeditor
 
